@@ -23,7 +23,6 @@ package io.vertigo.basics.task;
 import java.sql.SQLException;
 import java.util.List;
 import java.util.OptionalInt;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 
@@ -107,7 +106,7 @@ public final class TaskEngineInsertBatch extends AbstractTaskEngineSQL {
 		final List<TaskAttribute> otherAttributes = getTaskDefinition().getInAttributes()
 				.stream()
 				.filter(inAttribute -> !inAttribute.cardinality().hasMany())// not multiple
-				.collect(Collectors.toList());
+				.toList();
 		//---
 		final List<?> list = getValue(listAttribute.name());
 		list.forEach(object -> {
@@ -124,7 +123,7 @@ public final class TaskEngineInsertBatch extends AbstractTaskEngineSQL {
 		final List<TaskAttribute> potentialBatchAttributes = getTaskDefinition().getInAttributes()
 				.stream()
 				.filter(inAttribute -> inAttribute.cardinality().hasMany())// multiple
-				.collect(Collectors.toList());
+				.toList();
 
 		Assertion.check().isTrue(potentialBatchAttributes.size() == 1, "For batch a single List param is required");
 		return potentialBatchAttributes.get(0);
